token and proxy fix

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,9 @@
-GPT_OSS_API_URL="http://your-gpt-oss-endpoint/v1/chat/completions"
-GPT_OSS_API_KEY="your-api-key-here"
+GPT_OSS_API_URL="https://practicus.vodafone.local/models/model-gateway-ai-hackathon/latest/v1"
+GPT_OSS_API_KEY="token_goes_here"
+proxy_username="vfuser"
+proxy_password="vfpwd"
+PRACTICUS_USERNAME="practicus_user"
+PRACTICUS_PASSWORD="practicus_password"
 HOST=0.0.0.0
 PORT=8000
 DEBUG=False
